Add Products Page

--- a/src/css/product-detail.css
+++ b/src/css/product-detail.css
@@ -274,4 +274,4 @@ footer .footer-container {
         font-size: 19px;
         color: #FFFFFF; }
 
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=product-detail.css.map */
