--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display+SC&family=Roboto:wght@300;400&display=swap");
 *,
 *::after,
@@ -274,4 +275,171 @@ footer .footer-container {
         font-size: 19px;
         color: #FFFFFF; }
 
-/*# sourceMappingURL=style.css.map */
+main .carousel-item {
+  width: 100%;
+  height: 400px; }
+  @media (min-width: 992px) {
+    main .carousel-item {
+      height: 600px; } }
+  main .carousel-item img {
+    width: 100%;
+    height: 100%;
+    filter: brightness(40%);
+    object-fit: cover; }
+  main .carousel-item .carousel-caption {
+    position: absolute;
+    top: 50%;
+    transform: translateY(calc(-50% + -30px));
+    max-width: 800px;
+    margin: 0 auto; }
+    main .carousel-item .carousel-caption h2 {
+      font-size: 30px;
+      font-family: 'Playfair Display SC', serif;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      /* Número de linhas que deseja exibir */
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      text-overflow: ellipsis; }
+    main .carousel-item .carousel-caption p {
+      font-size: 19px;
+      margin-bottom: 20px;
+      display: -webkit-box;
+      -webkit-line-clamp: 3;
+      /* Número de linhas que deseja exibir */
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      text-overflow: ellipsis; }
+    main .carousel-item .carousel-caption a {
+      background-color: #FFFFFF;
+      padding: 8px 40px;
+      border-radius: 30px;
+      color: #080808; }
+      main .carousel-item .carousel-caption a:hover {
+        color: #FFFFFF;
+        background-color: #080808;
+        transition: .3s; }
+    @media (min-width: 992px) {
+      main .carousel-item .carousel-caption {
+        transform: translateY(-30%); } }
+main .carousel-control-prev, main .carousel-control-next {
+  width: auto;
+  margin: 0;
+  padding: 5px;
+  transform: scale(1.3); }
+main .carousel-indicators {
+  bottom: -10px; }
+  main .carousel-indicators li {
+    padding: 3px 20px !important; }
+    main .carousel-indicators li:nth-child(2) {
+      margin: 0 10px; }
+@media (min-width: 992px) {
+  main .carousel-control-prev, main .carousel-control-next {
+    padding: 10px;
+    transform: scale(2); }
+  main .carousel-indicators {
+    bottom: -10px; }
+    main .carousel-indicators li {
+      padding: 5px 30px !important; }
+      main .carousel-indicators li:nth-child(2) {
+        margin: 0 20px; } }
+main .products-groups {
+  padding: 10px;
+  width: 100%;
+  margin: 0 auto; }
+  @media (min-width: 992px) {
+    main .products-groups {
+      margin: 30px auto; } }
+  main .products-groups .group {
+    margin-top: 20px; }
+    main .products-groups .group-title {
+      font-size: 19px;
+      color: #080808;
+      padding: 10px; }
+      @media (min-width: 992px) {
+        main .products-groups .group-title {
+          font-size: 19px; } }
+    main .products-groups .group .cards {
+      width: 100%;
+      overflow: scroll;
+      margin: 15px 0 30px 0; }
+      main .products-groups .group .cards .card {
+        min-width: 185px;
+        max-width: 185px;
+        margin-right: 5px;
+        border: none;
+        background-color: #FAFAFA; }
+        @media (min-width: 992px) {
+          main .products-groups .group .cards .card {
+            min-width: 230px;
+            max-width: 230px; } }
+        main .products-groups .group .cards .card:hover {
+          filter: brightness(95%); }
+        main .products-groups .group .cards .card .card-body {
+          padding: 10px 3px;
+          color: #080808; }
+          main .products-groups .group .cards .card .card-body h3 {
+            display: -webkit-box;
+            -webkit-line-clamp: 4;
+            /* Número de linhas que deseja exibir */
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            color: #080808;
+            font-size: 15px;
+            margin-top: 5px;
+            letter-spacing: 1px;
+            font-weight: 300; }
+          main .products-groups .group .cards .card .card-body .old-price {
+            text-decoration: line-through;
+            margin-right: 5px;
+            opacity: .7;
+            font-size: 15px; }
+          main .products-groups .group .cards .card .card-body .current-price {
+            font-size: 19px;
+            margin-right: 5px; }
+  main .products-groups .btn-show-catalog {
+    color: #FFFFFF;
+    width: 90%;
+    max-width: 400px;
+    border-radius: 30px;
+    display: inline-block;
+    text-align: center;
+    padding: 8px 0;
+    background-color: #080808;
+    font-size: 19px;
+    margin: 20px 0; }
+main .follow-instagram {
+  margin-top: 20px; }
+  main .follow-instagram a {
+    display: flex;
+    flex-wrap: wrap; }
+    main .follow-instagram a div {
+      flex-basis: 350px;
+      flex-grow: 1;
+      height: 350px; }
+      @media (min-width: 600px) {
+        main .follow-instagram a div {
+          max-width: 50%; } }
+      main .follow-instagram a div img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover; }
+        main .follow-instagram a div img:hover {
+          filter: brightness(50%); }
+      main .follow-instagram a div p {
+        position: absolute;
+        top: 50%;
+        text-align: center;
+        color: #FFFFFF;
+        font-size: 19px;
+        transform: translateY(-50%);
+        padding: 10px; }
+        main .follow-instagram a div p:hover {
+          filter: brightness(50%); }
+  main .follow-instagram h2 {
+    text-align: center;
+    margin-bottom: 20px;
+    font-size: 30px; }
+
+/*# sourceMappingURL=home.css.map */
