--- a/src/css/products.css
+++ b/src/css/products.css
@@ -91,7 +91,8 @@ header .dropdown {
   height: 0;
   overflow: hidden;
   transition: .4s;
-  z-index: 3; }
+  z-index: 3;
+  top: 0; }
   @media (orientation: landscape) and (max-width: 992px) {
     header .dropdown {
       overflow: scroll; } }
@@ -275,6 +276,37 @@ footer .footer-container {
         font-size: 19px;
         color: #FFFFFF; }
 
+.card {
+  border: none; }
+  .card:hover {
+    filter: brightness(95%); }
+  .card .card-body {
+    padding: 10px 3px;
+    color: #080808; }
+    .card .card-body h3 {
+      display: -webkit-box;
+      -webkit-line-clamp: 4;
+      /* Número de linhas que deseja exibir */
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      color: #080808;
+      font-size: 15px;
+      margin-top: 5px;
+      letter-spacing: 1px;
+      font-weight: 300; }
+    .card .card-body .old-price {
+      text-decoration: line-through;
+      margin-right: 5px;
+      opacity: .7;
+      font-size: 15px; }
+    .card .card-body .current-price {
+      font-size: 19px;
+      margin-right: 5px; }
+    .card .card-body .shipping {
+      color: #00A650;
+      font-size: 15px; }
+
 @media (min-width: 1400px) {
   .col-xl-3 {
     max-width: 20%; } }
@@ -300,41 +332,34 @@ main .banner {
       height: 600px; } }
 main .products {
   margin: 35px 0; }
-  main .products select {
+  main .products .dropdown-toggle {
     width: 100%;
-    padding: 10px;
-    margin-bottom: 30px;
-    border: none;
-    background-color: #DDDDDD; }
+    margin-bottom: 20px;
+    background-color: #DDDDDD;
+    border: none; }
+    main .products .dropdown-toggle:focus {
+      border: none; }
+  main .products .dropdown-menu {
+    width: 100%; }
+  main .products .sort-products {
+    display: flex;
+    align-items: center; }
+    main .products .sort-products label {
+      margin-right: 1rem; }
+    main .products .sort-products select {
+      padding: 0.5rem;
+      font-size: 16px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      background-color: #fff;
+      cursor: pointer; }
+      main .products .sort-products select:focus {
+        outline: none;
+        box-shadow: 0 0 3px rgba(0, 123, 255, 0.6); }
   main .products .card {
     opacity: 0;
     transition: opacity 1s;
     border: none;
     background-color: #FAFAFA; }
-    main .products .card:hover {
-      filter: brightness(95%); }
-    main .products .card .card-body {
-      padding: 10px 3px;
-      color: #080808; }
-      main .products .card .card-body h3 {
-        display: -webkit-box;
-        -webkit-line-clamp: 4;
-        /* Número de linhas que deseja exibir */
-        -webkit-box-orient: vertical;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        color: #080808;
-        font-size: 15px;
-        margin-top: 5px;
-        letter-spacing: 1px;
-        font-weight: 300; }
-      main .products .card .card-body .old-price {
-        text-decoration: line-through;
-        margin-right: 5px;
-        opacity: .7;
-        font-size: 15px; }
-      main .products .card .card-body .current-price {
-        font-size: 19px;
-        margin-right: 5px; }
 
 /*# sourceMappingURL=products.css.map */
