--- a/src/sass/product-detail/style.scss
+++ b/src/sass/product-detail/style.scss
@@ -1,1 +1,277 @@
 @import '../style.scss';
+@import '../card.scss';
+
+@include desktop{
+    .col-xl-3{
+        max-width: 20%;
+    }
+}
+
+main{
+    margin-top: 100px;
+    color: #4A4F52;
+
+    @include laptop{
+        &{
+            margin-top: 180px;
+        }
+    }
+
+    .product-gallery{
+        .expansive-thumbnail{
+            width: 100%;
+            height: 400px;
+            object-fit: cover;
+            border: 10px solid $light-gray;
+            border-bottom: none;
+        }
+
+        .thumbnails{
+            overflow-x: scroll;
+            background-color: $light-gray;
+            padding: 5px 0;
+            border: 10px solid $light-gray;
+
+            &::-webkit-scrollbar {
+                display: none;
+            }
+
+            img{
+                width: 120px;
+                height: 100px;
+                cursor: pointer;
+                margin: 0 5px;
+
+                &:first-child{
+                    margin-left: 0;
+                }
+
+                &:last-child{
+                    margin-right: 0;
+                }
+            }
+        }
+    }
+
+    .product-info{
+        margin-top: 30px;
+
+        @include laptop{
+            &{
+                margin-top: 0;
+            }
+        }
+
+        h1{
+            font-size: $medium;
+        }
+
+        .old-price{
+            text-decoration: line-through;
+            margin-right: 5px;
+            opacity: .7;
+            font-size: $small;
+        }
+
+        .current-price{
+            font-size: $medium;
+            margin-right: 5px;
+        }
+
+        .shipping{
+            color: #00A650;
+        }
+
+        .text{
+            margin-top: 25px;
+        }
+    }
+
+    // Comments
+    .comments{
+        margin-top: 50px;        // Styles for the comment summary section 
+
+        .comment-summary {
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            justify-content: space-between;
+            margin-bottom: 20px;
+
+            .stars-breakdown {
+                display: flex;
+                flex-direction: column;
+
+                .star-rating {
+                    display: flex;
+                    align-items: center;
+                    margin-bottom: 5px;
+
+                    .star {
+                        font-size: $nano;
+                        color: #333;
+                    }
+
+                    .progress-bar {
+                        width: 100px;
+                        height: 8px;
+                        background-color: #eee;
+                        border-radius: 4px;
+                        margin-left: 10px;
+
+                        .progress {
+                            height: 100%;
+                            background-color: #00a6ff;
+                            border-radius: 4px;
+                        }
+                    }
+
+                    .rating-percentage {
+                        font-size: $nano;
+                        margin-left: 10px;
+                        color: #555;
+                    }
+                }
+            }
+
+            .total-rating {
+                .total-ratings {
+                    font-size: $nano;
+                    color: #777;
+                    margin-bottom: 5px;
+                }
+
+                .average-rating {
+                    font-size: $small;
+                    font-weight: bold;
+                    color: #333;
+                }
+            }
+        }
+
+        &-sort {
+            display: flex;
+            margin-bottom: 15px;
+
+            label {
+                font-size: $nano;
+                margin-right: 10px;
+                color: #777;
+            }
+
+            select {
+                font-size: $nano;
+                padding: 5px 10px;
+                border: 1px solid #ddd;
+                border-radius: 5px;
+                color: #555;
+                background-color: $light-gray;
+            }
+        }
+
+        .comment-section {
+            margin-bottom: 20px;
+            border: 1px solid #ddd;
+            padding: 15px;
+            border-radius: 5px;
+
+            .user-info {
+                display: flex;
+                align-items: center;
+                margin-bottom: 10px;
+
+                img {
+                    width: 60px;
+                    height: 60px;
+                    border-radius: 50%;
+                    margin-right: 10px;
+                }
+
+                .user-name {
+                    font-weight: bold;
+                }
+            }
+
+            .rating {
+                color: #ffd700; 
+                font-size: $small;
+                margin-bottom: 10px;
+
+                i {
+                    margin-right: 5px;
+                }
+            }
+
+            .comment-title {
+                font-size: $small;
+                font-weight: bold;
+                margin-bottom: 10px;
+            }
+
+            .comment-text {
+                line-height: 1.5;
+            }
+
+            .ratings-summary {
+                display: flex;
+                justify-content: space-between;
+                margin-top: 15px;
+
+                .total-ratings, .average-rating {
+                    font-size: $nano;
+                    color: #777;
+                }
+            }
+
+            .comment-images {
+                display: flex;
+                flex-wrap: wrap;
+                margin-top: 10px;
+
+                img {
+                    width: 100px;
+                    height: 100px;
+                    object-fit: cover;
+                    border: 1px solid #ddd;
+                    border-radius: 5px;
+                    margin-right: 10px;
+                    margin-bottom: 10px;
+                }
+            }
+        }
+    }
+
+    .btn-show-comment{
+        text-align: center;
+
+        a{
+            background-color: $light-gray;
+            padding: 8px 30px;
+        }
+    }
+
+    // More Products
+    .more-products{
+        margin-top: 50px;
+
+        @include laptop{
+            &{
+                margin-top: 80px;
+            }
+        }
+
+        h2{
+            font-size: $medium;
+            text-align: center;
+            margin-bottom: 25px;
+        }
+
+        .cards{
+            .card{
+                width: calc(50% - 7px);
+                max-width: 200px;
+                margin: 0 7px 7px 0;
+            }
+        }
+    }
+}
