--- a/src/sass/products/style.scss
+++ b/src/sass/products/style.scss
@@ -1,4 +1,5 @@
 @import '../style.scss';
+@import '../card.scss';
 
 @include desktop{
     .col-xl-3{
@@ -39,12 +40,44 @@ main{
     .products{
         margin: 35px 0;
 
-        select{
+        // Filter
+        .dropdown-toggle{
             width: 100%;
-            padding: 10px;
-            margin-bottom: 30px;
+            margin-bottom: 20px;
+            background-color: $light-gray;
             border: none;
-            background-color: $light-gray;;
+
+            &:focus{
+                border: none;
+            }
+        }
+
+        .dropdown-menu{
+            width: 100%;
+        }
+
+        // Sort
+        .sort-products{
+            display: flex;
+            align-items: center;
+            
+            label{
+                margin-right: 1rem;
+            }
+
+            select {
+                padding: 0.5rem;
+                font-size: 16px;
+                border: 1px solid #ccc;
+                border-radius: 4px;
+                background-color: #fff;
+                cursor: pointer;
+
+                &:focus {
+                  outline: none;
+                  box-shadow: 0 0 3px rgba(0, 123, 255, 0.6);
+                }
+            }
         }
 
         .card{
@@ -52,40 +85,6 @@ main{
             transition: opacity 1s;
             border: none;
             background-color: $white-smoke;
-
-            &:hover{
-                filter: brightness(95%);
-            }
-
-            .card-body{
-                padding: 10px 3px;
-                color: $black;
-
-                h3{
-                    display: -webkit-box;
-                    -webkit-line-clamp: 4; /* Número de linhas que deseja exibir */
-                    -webkit-box-orient: vertical;
-                    overflow: hidden;
-                    text-overflow: ellipsis;
-                    color: $black;
-                    font-size: $nano;
-                    margin-top: 5px;
-                    letter-spacing: 1px;
-                    font-weight: 300;
-                }
-
-                .old-price{
-                    text-decoration: line-through;
-                    margin-right: 5px;
-                    opacity: .7;
-                    font-size: $nano;
-                }
-
-                .current-price{
-                    font-size: $small;
-                    margin-right: 5px;
-                }
-            }
         }
     }
 }
