--- a/src/css/home.css
+++ b/src/css/home.css
@@ -107,6 +107,8 @@ header .dropdown {
     background-color: #FAFAFA; }
     @media (min-width: 992px) {
       header .dropdown-top {
+        background-color: #DDDDDD;
+        color: #FFFFFF;
         width: 100%;
         position: absolute;
         top: -40px;
@@ -140,15 +142,19 @@ header .dropdown {
         padding: 6px 15px; }
     header .dropdown-top select {
       padding: 8px 20px;
-      border: none;
       border-radius: 30px;
       margin: 30px 0;
       background-color: #DDDDDD;
-      cursor: pointer; }
+      cursor: pointer;
+      border: none; }
+      @media (min-width: 992px) {
+        header .dropdown-top select {
+          border: 1px solid #080808; } }
     header .dropdown-top .theme-icon i {
       font-size: 19px;
       margin-left: 20px;
-      cursor: pointer; }
+      cursor: pointer;
+      color: #080808; }
     header .dropdown-top .social-media {
       border-top: 1px solid #080808;
       width: 100px;
@@ -255,10 +261,10 @@ footer .infobar {
       font-size: 19px; }
 footer .footer-container {
   background-color: #080808;
-  padding-top: 30px;
+  padding-top: 60px;
   color: #FFFFFF; }
   footer .footer-container h2 {
-    font-size: 19px;
+    font-size: 21px;
     color: #DDDDDD;
     margin-bottom: 20px;
     font-weight: bold; }
@@ -276,34 +282,45 @@ footer .footer-container {
         font-size: 19px;
         color: #FFFFFF; }
 
-.card:hover {
-  filter: brightness(95%); }
-.card .card-body {
-  padding: 10px 3px;
-  color: #080808; }
-  .card .card-body h3 {
-    display: -webkit-box;
-    -webkit-line-clamp: 4;
-    /* Número de linhas que deseja exibir */
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    color: #080808;
-    font-size: 15px;
-    margin-top: 5px;
-    letter-spacing: 1px;
-    font-weight: 300; }
-  .card .card-body .old-price {
-    text-decoration: line-through;
-    margin-right: 5px;
-    opacity: .7;
-    font-size: 15px; }
-  .card .card-body .current-price {
-    font-size: 19px;
-    margin-right: 5px; }
-  .card .card-body .shipping {
-    color: #00A650;
-    font-size: 15px; }
+.card {
+  border: none; }
+  .card:hover {
+    filter: brightness(95%); }
+  .card .qtda-heart {
+    position: absolute;
+    bottom: 5px;
+    right: 10px;
+    color: #FFFFFF; }
+    .card .qtda-heart:hover {
+      cursor: pointer; }
+      .card .qtda-heart:hover i {
+        color: red; }
+  .card .card-body {
+    padding: 10px 3px;
+    color: #080808; }
+    .card .card-body h3 {
+      display: -webkit-box;
+      -webkit-line-clamp: 4;
+      /* Número de linhas que deseja exibir */
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      color: #080808;
+      font-size: 15px;
+      margin-top: 5px;
+      letter-spacing: 1px;
+      font-weight: 300; }
+    .card .card-body .old-price {
+      text-decoration: line-through;
+      margin-right: 5px;
+      opacity: .7;
+      font-size: 15px; }
+    .card .card-body .current-price {
+      font-size: 19px;
+      margin-right: 5px; }
+    .card .card-body .shipping {
+      color: #00A650;
+      font-size: 15px; }
 
 main .carousel-item {
   width: 100%;
@@ -327,7 +344,6 @@ main .carousel-item {
       font-family: 'Playfair Display SC', serif;
       display: -webkit-box;
       -webkit-line-clamp: 2;
-      /* Número de linhas que deseja exibir */
       -webkit-box-orient: vertical;
       overflow: hidden;
       text-overflow: ellipsis; }
@@ -393,6 +409,14 @@ main .products-groups {
       width: 100%;
       overflow: scroll;
       margin: 15px 0 30px 0; }
+      main .products-groups .group .cards::-webkit-scrollbar {
+        display: none;
+        /* Hide scrollbar for Chrome, Safari and Opera */ }
+      main .products-groups .group .cards {
+        -ms-overflow-style: none;
+        /* IE and Edge */
+        scrollbar-width: none;
+        /* Firefox */ }
       main .products-groups .group .cards .card {
         min-width: 185px;
         max-width: 185px;
