--- a/src/css/product-detail.css
+++ b/src/css/product-detail.css
@@ -107,6 +107,8 @@ header .dropdown {
     background-color: #FAFAFA; }
     @media (min-width: 992px) {
       header .dropdown-top {
+        background-color: #DDDDDD;
+        color: #FFFFFF;
         width: 100%;
         position: absolute;
         top: -40px;
@@ -140,15 +142,19 @@ header .dropdown {
         padding: 6px 15px; }
     header .dropdown-top select {
       padding: 8px 20px;
-      border: none;
       border-radius: 30px;
       margin: 30px 0;
       background-color: #DDDDDD;
-      cursor: pointer; }
+      cursor: pointer;
+      border: none; }
+      @media (min-width: 992px) {
+        header .dropdown-top select {
+          border: 1px solid #080808; } }
     header .dropdown-top .theme-icon i {
       font-size: 19px;
       margin-left: 20px;
-      cursor: pointer; }
+      cursor: pointer;
+      color: #080808; }
     header .dropdown-top .social-media {
       border-top: 1px solid #080808;
       width: 100px;
@@ -255,10 +261,10 @@ footer .infobar {
       font-size: 19px; }
 footer .footer-container {
   background-color: #080808;
-  padding-top: 30px;
+  padding-top: 60px;
   color: #FFFFFF; }
   footer .footer-container h2 {
-    font-size: 19px;
+    font-size: 21px;
     color: #DDDDDD;
     margin-bottom: 20px;
     font-weight: bold; }
@@ -279,7 +285,7 @@ footer .footer-container {
 .card {
   border: none; }
   .card:hover {
-    filter: brightness(95%); }
+    filter: brightness(96%); }
   .card .card-body {
     padding: 10px 3px;
     color: #080808; }
@@ -305,7 +311,105 @@ footer .footer-container {
       margin-right: 5px; }
     .card .card-body .shipping {
       color: #00A650;
-      font-size: 15px; }
+      font-size: 15px;
+      white-space: nowrap; }
+
+.comments .comment-summary {
+  margin-bottom: 30px; }
+  .comments .comment-summary .stars-breakdown {
+    display: flex;
+    flex-direction: column; }
+    .comments .comment-summary .stars-breakdown .star-rating {
+      display: flex;
+      margin-bottom: 10px; }
+      .comments .comment-summary .stars-breakdown .star-rating .star {
+        font-size: 15px;
+        color: #333; }
+      .comments .comment-summary .stars-breakdown .star-rating .progress-bar {
+        width: calc(100% - 115px);
+        max-width: 500px;
+        margin-left: 10px;
+        height: 20px;
+        background-color: #eee;
+        border-radius: 4px; }
+        .comments .comment-summary .stars-breakdown .star-rating .progress-bar .progress {
+          height: 100%;
+          background-color: #080808;
+          border-radius: 4px; }
+      .comments .comment-summary .stars-breakdown .star-rating .rating-percentage {
+        font-size: 15px;
+        margin-left: 10px;
+        color: #555; }
+  .comments .comment-summary .total-rating .total-ratings {
+    font-size: 15px;
+    color: #777;
+    margin-bottom: 5px; }
+  .comments .comment-summary .total-rating .average-rating {
+    font-size: 19px;
+    font-weight: bold;
+    color: #333; }
+.comments .comments-sort {
+  display: flex;
+  margin-bottom: 30px; }
+  .comments .comments-sort label {
+    font-size: 15px;
+    margin-right: 10px;
+    color: #777; }
+  .comments .comments-sort select {
+    font-size: 15px;
+    padding: 5px 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    color: #555;
+    background-color: #DDDDDD; }
+.comments .comment-section {
+  border: 1px solid #ddd;
+  padding: 15px;
+  border-radius: 5px;
+  width: 100%;
+  max-width: 500px; }
+  .comments .comment-section .user-info {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px; }
+    .comments .comment-section .user-info img {
+      width: 60px;
+      height: 60px;
+      border-radius: 50%;
+      margin-right: 10px; }
+    .comments .comment-section .user-info .user-name {
+      font-weight: bold; }
+  .comments .comment-section .rating {
+    color: #ffd700;
+    font-size: 19px;
+    margin-bottom: 10px; }
+    .comments .comment-section .rating i {
+      margin-right: 5px; }
+  .comments .comment-section .comment-title {
+    font-size: 19px;
+    font-weight: bold;
+    margin-bottom: 10px; }
+  .comments .comment-section .comment-text {
+    line-height: 1.5; }
+  .comments .comment-section .ratings-summary {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 15px; }
+    .comments .comment-section .ratings-summary .total-ratings, .comments .comment-section .ratings-summary .average-rating {
+      font-size: 15px;
+      color: #777; }
+  .comments .comment-section .comment-images {
+    display: flex;
+    margin-top: 10px;
+    overflow-X: scroll; }
+    .comments .comment-section .comment-images img {
+      width: 100px;
+      height: 100px;
+      object-fit: cover;
+      border: 1px solid #ddd;
+      border-radius: 5px;
+      margin-right: 10px;
+      margin-bottom: 10px; }
 
 @media (min-width: 1400px) {
   .col-xl-3 {
@@ -322,13 +426,29 @@ main {
     object-fit: cover;
     border: 10px solid #DDDDDD;
     border-bottom: none; }
+  main .product-gallery .qtda-heart {
+    position: absolute;
+    bottom: 15px;
+    right: 25px;
+    color: #FFFFFF;
+    font-size: 19px; }
+    main .product-gallery .qtda-heart:hover {
+      cursor: pointer; }
+      main .product-gallery .qtda-heart:hover i {
+        color: red; }
   main .product-gallery .thumbnails {
     overflow-x: scroll;
     background-color: #DDDDDD;
     padding: 5px 0;
     border: 10px solid #DDDDDD; }
     main .product-gallery .thumbnails::-webkit-scrollbar {
-      display: none; }
+      display: none;
+      /* Hide scrollbar for Chrome, Safari and Opera */ }
+    main .product-gallery .thumbnails {
+      -ms-overflow-style: none;
+      /* IE and Edge */
+      scrollbar-width: none;
+      /* Firefox */ }
     main .product-gallery .thumbnails img {
       width: 120px;
       height: 100px;
@@ -339,142 +459,51 @@ main {
       main .product-gallery .thumbnails img:last-child {
         margin-right: 0; }
   main .product-info {
-    margin-top: 30px; }
+    margin-top: 30px;
+    margin-bottom: 60px; }
     @media (min-width: 992px) {
       main .product-info {
-        margin-top: 0; } }
+        padding-right: 150px;
+        margin-bottom: 30px; } }
     main .product-info h1 {
-      font-size: 25px; }
+      font-size: 24px; }
     main .product-info .old-price {
       text-decoration: line-through;
       margin-right: 5px;
       opacity: .7;
       font-size: 19px; }
     main .product-info .current-price {
-      font-size: 25px;
+      font-size: 24px;
       margin-right: 5px; }
     main .product-info .shipping {
       color: #00A650; }
     main .product-info .text {
       margin-top: 25px; }
-  main .comments {
-    margin-top: 50px; }
-    main .comments .comment-summary {
-      display: flex;
-      flex-wrap: wrap;
-      align-items: center;
-      justify-content: space-between;
-      margin-bottom: 20px; }
-      main .comments .comment-summary .stars-breakdown {
-        display: flex;
-        flex-direction: column; }
-        main .comments .comment-summary .stars-breakdown .star-rating {
-          display: flex;
-          align-items: center;
-          margin-bottom: 5px; }
-          main .comments .comment-summary .stars-breakdown .star-rating .star {
-            font-size: 15px;
-            color: #333; }
-          main .comments .comment-summary .stars-breakdown .star-rating .progress-bar {
-            width: 100px;
-            height: 8px;
-            background-color: #eee;
-            border-radius: 4px;
-            margin-left: 10px; }
-            main .comments .comment-summary .stars-breakdown .star-rating .progress-bar .progress {
-              height: 100%;
-              background-color: #00a6ff;
-              border-radius: 4px; }
-          main .comments .comment-summary .stars-breakdown .star-rating .rating-percentage {
-            font-size: 15px;
-            margin-left: 10px;
-            color: #555; }
-      main .comments .comment-summary .total-rating .total-ratings {
-        font-size: 15px;
-        color: #777;
-        margin-bottom: 5px; }
-      main .comments .comment-summary .total-rating .average-rating {
-        font-size: 19px;
-        font-weight: bold;
-        color: #333; }
-    main .comments-sort {
-      display: flex;
-      margin-bottom: 15px; }
-      main .comments-sort label {
-        font-size: 15px;
-        margin-right: 10px;
-        color: #777; }
-      main .comments-sort select {
-        font-size: 15px;
-        padding: 5px 10px;
-        border: 1px solid #ddd;
-        border-radius: 5px;
-        color: #555;
-        background-color: #DDDDDD; }
-    main .comments .comment-section {
-      margin-bottom: 20px;
-      border: 1px solid #ddd;
-      padding: 15px;
-      border-radius: 5px; }
-      main .comments .comment-section .user-info {
-        display: flex;
-        align-items: center;
-        margin-bottom: 10px; }
-        main .comments .comment-section .user-info img {
-          width: 60px;
-          height: 60px;
-          border-radius: 50%;
-          margin-right: 10px; }
-        main .comments .comment-section .user-info .user-name {
-          font-weight: bold; }
-      main .comments .comment-section .rating {
-        color: #ffd700;
-        font-size: 19px;
-        margin-bottom: 10px; }
-        main .comments .comment-section .rating i {
-          margin-right: 5px; }
-      main .comments .comment-section .comment-title {
-        font-size: 19px;
-        font-weight: bold;
-        margin-bottom: 10px; }
-      main .comments .comment-section .comment-text {
-        line-height: 1.5; }
-      main .comments .comment-section .ratings-summary {
-        display: flex;
-        justify-content: space-between;
-        margin-top: 15px; }
-        main .comments .comment-section .ratings-summary .total-ratings, main .comments .comment-section .ratings-summary .average-rating {
-          font-size: 15px;
-          color: #777; }
-      main .comments .comment-section .comment-images {
-        display: flex;
-        flex-wrap: wrap;
-        margin-top: 10px; }
-        main .comments .comment-section .comment-images img {
-          width: 100px;
-          height: 100px;
-          object-fit: cover;
-          border: 1px solid #ddd;
-          border-radius: 5px;
-          margin-right: 10px;
-          margin-bottom: 10px; }
-  main .btn-show-comment {
-    text-align: center; }
-    main .btn-show-comment a {
+    main .product-info .btn-back {
       background-color: #DDDDDD;
-      padding: 8px 30px; }
+      color: #080808; }
+  @media (min-width: 992px) {
+    main .comments {
+      position: absolute;
+      top: 0;
+      left: calc(50% + 30px); } }
+  main .comments .btn-show-comments {
+    margin-top: 20px;
+    background-color: #DDDDDD;
+    color: #080808;
+    padding: 8px 30px; }
   main .more-products {
     margin-top: 50px; }
     @media (min-width: 992px) {
       main .more-products {
         margin-top: 80px; } }
     main .more-products h2 {
-      font-size: 25px;
+      font-size: 24px;
       text-align: center;
       margin-bottom: 25px; }
-    main .more-products .cards .card {
-      width: calc(50% - 7px);
-      max-width: 200px;
-      margin: 0 7px 7px 0; }
+    main .more-products .card {
+      width: calc(50% - 4px);
+      max-width: 202px;
+      margin: 0 4px 4px 0; }
 
 /*# sourceMappingURL=product-detail.css.map */
