--- a/src/sass/_style.scss
+++ b/src/sass/_style.scss
@@ -10,7 +10,7 @@ $light-gray: #DDDDDD;
 // Site Font Size
 $nano: 15px;
 $small: 19px;
-$medium: 25px;
+$medium: 24px;
 $large: 30px;
 
 @mixin landscape{
@@ -195,6 +195,8 @@ header{
 
             @include laptop{
                 &{
+                    background-color: $light-gray;
+                    color: $white;
                     width: 100%;
                     position: absolute;
                     top: -40px;
@@ -240,17 +242,24 @@ header{
 
             select{
                 padding: 8px 20px;
-                border: none;
                 border-radius: 30px;
                 margin: 30px 0;
                 background-color: $light-gray;
                 cursor: pointer;
+                border: none;
+
+                @include laptop{
+                    &{
+                        border: 1px solid $black;
+                    }
+                }
             }
 
             .theme-icon i{
                 font-size: $small;
                 margin-left: 20px;
                 cursor: pointer;
+                color: $black;
             }
 
             .social-media{
@@ -419,11 +428,11 @@ footer{
 
     .footer-container{
         background-color: $black;
-        padding-top: 30px;
+        padding-top: 60px;
         color: $white;
 
         h2{
-            font-size: $small;
+            font-size: $small + 2px;
             color: $light-gray;
             margin-bottom: 20px;
             font-weight: bold;
