--- a/src/sass/index/style.scss
+++ b/src/sass/index/style.scss
@@ -32,7 +32,7 @@ main{
                     font-size: $large;
                     font-family: 'Playfair Display SC', serif;
                     display: -webkit-box;
-                    -webkit-line-clamp: 2; /* Número de linhas que deseja exibir */
+                    -webkit-line-clamp: 2;
                     -webkit-box-orient: vertical;
                     overflow: hidden;
                     text-overflow: ellipsis;
@@ -141,6 +141,15 @@ main{
                 width: 100%;
                 overflow: scroll;
                 margin: 15px 0 30px 0;
+
+                &::-webkit-scrollbar {
+                    display: none; /* Hide scrollbar for Chrome, Safari and Opera */
+                }
+
+                &{
+                    -ms-overflow-style: none;  /* IE and Edge */
+                    scrollbar-width: none;  /* Firefox */
+                }
 
                 .card{
                     @include laptop{
