--- a/src/sass/product-detail/style.scss
+++ b/src/sass/product-detail/style.scss
@@ -1,6 +1,6 @@
 @import '../style.scss';
 @import '../card.scss';
-
+@import '../comments.scss';
 @include desktop{
     .col-xl-3{
         max-width: 20%;
@@ -26,6 +26,22 @@ main{
             border-bottom: none;
         }
 
+        .qtda-heart{
+            position: absolute;
+            bottom: 15px;
+            right: 25px;
+            color: $white;
+            font-size: $small;
+
+            &:hover{
+                cursor: pointer;
+
+                i{
+                    color: red;
+                }
+            }
+        }
+
         .thumbnails{
             overflow-x: scroll;
             background-color: $light-gray;
@@ -33,7 +49,12 @@ main{
             border: 10px solid $light-gray;
 
             &::-webkit-scrollbar {
-                display: none;
+                display: none; /* Hide scrollbar for Chrome, Safari and Opera */
+            }
+
+            &{
+                -ms-overflow-style: none;  /* IE and Edge */
+                scrollbar-width: none;  /* Firefox */
             }
 
             img{
@@ -55,11 +76,11 @@ main{
 
     .product-info{
         margin-top: 30px;
+        margin-bottom: 60px;
 
         @include laptop{
-            &{
-                margin-top: 0;
-            }
+            padding-right: 150px;
+            margin-bottom: 30px;
         }
 
         h1{
@@ -85,167 +106,27 @@ main{
         .text{
             margin-top: 25px;
         }
+
+        .btn-back{
+            background-color: $light-gray;
+            color: $black;
+        }
     }
 
     // Comments
     .comments{
-        margin-top: 50px;        // Styles for the comment summary section 
-
-        .comment-summary {
-            display: flex;
-            flex-wrap: wrap;
-            align-items: center;
-            justify-content: space-between;
-            margin-bottom: 20px;
-
-            .stars-breakdown {
-                display: flex;
-                flex-direction: column;
-
-                .star-rating {
-                    display: flex;
-                    align-items: center;
-                    margin-bottom: 5px;
-
-                    .star {
-                        font-size: $nano;
-                        color: #333;
-                    }
-
-                    .progress-bar {
-                        width: 100px;
-                        height: 8px;
-                        background-color: #eee;
-                        border-radius: 4px;
-                        margin-left: 10px;
-
-                        .progress {
-                            height: 100%;
-                            background-color: #00a6ff;
-                            border-radius: 4px;
-                        }
-                    }
-
-                    .rating-percentage {
-                        font-size: $nano;
-                        margin-left: 10px;
-                        color: #555;
-                    }
-                }
-            }
-
-            .total-rating {
-                .total-ratings {
-                    font-size: $nano;
-                    color: #777;
-                    margin-bottom: 5px;
-                }
-
-                .average-rating {
-                    font-size: $small;
-                    font-weight: bold;
-                    color: #333;
-                }
+        @include laptop{
+            &{
+                position: absolute;
+                top: 0;
+                left: calc(50% + 30px);
             }
         }
 
-        &-sort {
-            display: flex;
-            margin-bottom: 15px;
-
-            label {
-                font-size: $nano;
-                margin-right: 10px;
-                color: #777;
-            }
-
-            select {
-                font-size: $nano;
-                padding: 5px 10px;
-                border: 1px solid #ddd;
-                border-radius: 5px;
-                color: #555;
-                background-color: $light-gray;
-            }
-        }
-
-        .comment-section {
-            margin-bottom: 20px;
-            border: 1px solid #ddd;
-            padding: 15px;
-            border-radius: 5px;
-
-            .user-info {
-                display: flex;
-                align-items: center;
-                margin-bottom: 10px;
-
-                img {
-                    width: 60px;
-                    height: 60px;
-                    border-radius: 50%;
-                    margin-right: 10px;
-                }
-
-                .user-name {
-                    font-weight: bold;
-                }
-            }
-
-            .rating {
-                color: #ffd700; 
-                font-size: $small;
-                margin-bottom: 10px;
-
-                i {
-                    margin-right: 5px;
-                }
-            }
-
-            .comment-title {
-                font-size: $small;
-                font-weight: bold;
-                margin-bottom: 10px;
-            }
-
-            .comment-text {
-                line-height: 1.5;
-            }
-
-            .ratings-summary {
-                display: flex;
-                justify-content: space-between;
-                margin-top: 15px;
-
-                .total-ratings, .average-rating {
-                    font-size: $nano;
-                    color: #777;
-                }
-            }
-
-            .comment-images {
-                display: flex;
-                flex-wrap: wrap;
-                margin-top: 10px;
-
-                img {
-                    width: 100px;
-                    height: 100px;
-                    object-fit: cover;
-                    border: 1px solid #ddd;
-                    border-radius: 5px;
-                    margin-right: 10px;
-                    margin-bottom: 10px;
-                }
-            }
-        }
-    }
-
-    .btn-show-comment{
-        text-align: center;
-
-        a{
+        .btn-show-comments{
+            margin-top: 20px;
             background-color: $light-gray;
+            color: $black;
             padding: 8px 30px;
         }
     }
@@ -266,12 +147,10 @@ main{
             margin-bottom: 25px;
         }
 
-        .cards{
-            .card{
-                width: calc(50% - 7px);
-                max-width: 200px;
-                margin: 0 7px 7px 0;
-            }
+        .card{
+            width: calc(50% - 4px);
+            max-width: 202px;
+            margin: 0 4px 4px 0;
         }
     }
 }
